[package]
name = "restor"
version = "0.2.0"
authors = ["OptimisticPeach <optimistic.peach@outlook.com>"]
edition = "2018"
description = """
A dynamic resource storage system in rust.
"""
repository = "https://github.com/OptimisticPeach/restor"
readme = "readme.md"
keywords = ["dynamic", "storage", "typed"]
categories = ["data-structures"]
license = "MIT"

[dependencies]
parking_lot = "0.7.1"
owning_ref = "0.4"
