[package]
name = "restor"
version = "2.0.2"
authors = ["OptimisticPeach <optimistic.peach@outlook.com>"]
edition = "2018"
description = """
A dynamic resource storage system in rust.
"""
repository = "https://github.com/OptimisticPeach/restor"
readme = "readme.md"
keywords = ["dynamic", "storage", "typed"]
categories = ["data-structures"]
license = "MIT"

[dependencies]
parking_lot = "0.8.0"

[dev-dependencies]
lazy_static = "1.3.0"
